5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1642_2450.log
== TEST (2019-04-15 15:17:56) 
-- CODE:
nom1 = input("escreva o nome 1: ")
nome2 = input("escreva o nome 2: ")
if (nom1 < nom2):
	mensagem = nom1, nom2
else:
	mensagem = nom2, nom1
print(mensagem.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nom1 < nom2):
NameError: name 'nom2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:18:43) 
-- CODE:
nom1 = input("escreva o nome 1: ")
nome2 = input("escreva o nome 2: ")
if (nom1 < nom2):
	mensagem = nom1, nom2
else:
	mensagem = nom2, nom1
print(mensagem.upper())
-- EXECUTION TIME:
0.167672
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2450/main.py", line 3, in <module>
    if (nom1 < nom2):
NameError: name 'nom2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:47) 
-- CODE:
nom1 = input("escreva o nome 1: ")
nome2 = input("escreva o nome 2: ")
if (nom1 < nom2):
	mensagem = nom1, nom2
else:
	mensagem = nom2, nom1
print(mensagem.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nom1 < nom2):
NameError: name 'nom2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:33:49) 
-- CODE:
nom1 = input("escreva o nome 1: ")
nome2 = input("escreva o nome 2: ")
if (nom1 < nom2):
	mensagem = nom1, nom2
else:
	mensagem = nom2, nom1
print(mensagem.upper())
-- EXECUTION TIME:
0.220512
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2450/main.py", line 3, in <module>
    if (nom1 < nom2):
NameError: name 'nom2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
